Fix text color on mobile menu

--- a/src/layouts/SidebarMenu.scss
+++ b/src/layouts/SidebarMenu.scss
@@ -456,6 +456,7 @@
 
       a {
         padding: 3px 0 3px 30px;
+        color: #c4d7ec !important;
       }
     }
 
